cmake_minimum_required(VERSION 3.29)

project(PushSwap)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 11)

include_directories(push_swap/includes push_swap/lib_2.0/includes)

add_executable(PushSwap
		push_swap/srcs/push_swap.c
		push_swap/lib_2.0/Makefile
		push_swap/lib_2.0/srcs/write/ft_putstr_fd.c
		push_swap/lib_2.0/srcs/write/ft_putendl_fd.c
		push_swap/lib_2.0/srcs/write/ft_putnbr_fd.c
		push_swap/lib_2.0/srcs/write/ft_putchar_fd.c
		push_swap/lib_2.0/srcs/conversion/atoll_valid.c
		push_swap/lib_2.0/srcs/string/ft_isprint.c
		push_swap/lib_2.0/srcs/ft_printf/utils.c
		push_swap/lib_2.0/srcs/list/lstdup.c
		push_swap/lib_2.0/srcs/string/ft_striteri.c
		push_swap/lib_2.0/srcs/string/ft_strjoin.c
		push_swap/lib_2.0/srcs/ft_printf/print_numbers.c
		push_swap/lib_2.0/srcs/memory/sort_tab.c
		push_swap/lib_2.0/srcs/string/ft_substr.c
		push_swap/lib_2.0/srcs/string/ft_strncmp.c
		push_swap/lib_2.0/srcs/conversion/ft_atoi.c
		push_swap/lib_2.0/srcs/get_next_line/get_next_line.c
		push_swap/lib_2.0/srcs/string/ft_strdup.c
		push_swap/lib_2.0/srcs/memory/ft_calloc.c
		push_swap/lib_2.0/srcs/list/ft_lstiter_bonus.c
		push_swap/lib_2.0/srcs/list/ft_lstadd_back_bonus.c
		push_swap/lib_2.0/srcs/string/ft_isdigit.c
		push_swap/lib_2.0/srcs/list/ft_lstlast_bonus.c
		push_swap/lib_2.0/srcs/conversion/ft_itoa.c
		push_swap/lib_2.0/srcs/ft_printf/unsigned_itoa.c
		push_swap/lib_2.0/srcs/ft_printf/print_chars.c
		push_swap/lib_2.0/srcs/string/ft_strlcpy.c
		push_swap/lib_2.0/srcs/ft_printf/ft_printf.c
		push_swap/lib_2.0/srcs/memory/ft_memchr.c
		push_swap/lib_2.0/srcs/list/lstget_int.c
		push_swap/lib_2.0/srcs/list/ft_lstclear_bonus.c
		push_swap/lib_2.0/srcs/string/ft_strnstr.c
		push_swap/lib_2.0/srcs/string/ft_isascii.c
		push_swap/lib_2.0/srcs/list/ft_lstmap_bonus.c
		push_swap/lib_2.0/srcs/string/ft_strrchr.c
		push_swap/lib_2.0/srcs/string/ft_isalnum.c
		push_swap/lib_2.0/srcs/list/lstnew_int.c
		push_swap/lib_2.0/srcs/memory/ft_memcpy.c
		push_swap/lib_2.0/srcs/string/ft_strlen.c
		push_swap/lib_2.0/srcs/list/ft_lstnew_bonus.c
		push_swap/lib_2.0/srcs/memory/ft_memset.c
		push_swap/lib_2.0/srcs/list/lstdel_safely.c
		push_swap/lib_2.0/srcs/memory/ft_bzero.c
		push_swap/lib_2.0/srcs/memory/realloc.c
		push_swap/lib_2.0/srcs/ft_printf/print_n_string.c
		push_swap/lib_2.0/srcs/memory/free_matrix.c
		push_swap/lib_2.0/srcs/string/ft_strmapi.c
		push_swap/lib_2.0/srcs/conversion/ft_toupper.c
		push_swap/lib_2.0/srcs/conversion/ft_tolower.c
		push_swap/lib_2.0/srcs/list/ft_lstsize_bonus.c
		push_swap/lib_2.0/srcs/ft_printf/long_to_hex.c
		push_swap/lib_2.0/srcs/string/ft_strlcat.c
		push_swap/lib_2.0/srcs/string/ft_split.c
		push_swap/lib_2.0/srcs/list/ft_lstadd_front_bonus.c
		push_swap/lib_2.0/srcs/string/ft_strtrim.c
		push_swap/lib_2.0/srcs/string/ft_strchr.c
		push_swap/lib_2.0/srcs/memory/ft_memmove.c
		push_swap/lib_2.0/srcs/memory/ft_memcmp.c
		push_swap/lib_2.0/srcs/list/lstdetach.c
		push_swap/lib_2.0/srcs/string/ft_isalpha.c
		push_swap/lib_2.0/srcs/list/ft_lstdelone_bonus.c
		push_swap/includes/pushswap.h
		push_swap/includes/quicksort.h
		push_swap/lib_2.0/includes/ft_printf.h
		push_swap/lib_2.0/includes/get_next_line.h
		push_swap/lib_2.0/includes/lib_conversion.h
		push_swap/lib_2.0/includes/lib_list.h
		push_swap/lib_2.0/includes/lib_memory.h
		push_swap/lib_2.0/includes/lib_string.h
		push_swap/lib_2.0/includes/lib_write.h
		push_swap/lib_2.0/includes/libft.h
		push_swap/srcs/operations/push.c
		push_swap/srcs/operations/rev_rotate.c
		push_swap/srcs/operations/rotate.c
		push_swap/srcs/operations/swap.c
		push_swap/srcs/quicksort/chunk_sort_one_two.c
		push_swap/srcs/quicksort/chunk_sort_three.c
		push_swap/srcs/quicksort/chunk_split.c
		push_swap/srcs/quicksort/chunk_utils.c
		push_swap/srcs/quicksort/move.c
		push_swap/srcs/quicksort/pivots.c
		push_swap/srcs/quicksort/quicksort.c
		push_swap/srcs/input.c
		push_swap/srcs/ops_list.c
		push_swap/srcs/ps_utils.c
		push_swap/srcs/sort_small.c
		push_swap/Makefile
)